<resources>
    <string name="app_name">手机安全卫士</string>
    <string name="load_progress">下载进度：</string>
    <string name="version">版本号：</string>
    <string name="function_menu">功能列表</string>
    <string name="notice_text">有了手机卫士，可以对您的手机进行检测和保护，欢迎您的使用</string>
    <string name="home_array_item1">手机防盗</string>
    <string name="home_array_item2">通讯卫士</string>
    <string name="home_array_item3">软件管理</string>
    <string name="home_array_item4">进程管理</string>
    <string name="home_array_item5">流量统计</string>
    <string name="home_array_item6">手机杀毒</string>
    <string name="home_array_item7">缓存清理</string>
    <string name="home_array_item8">高级工具</string>
    <string name="home_array_item9">设置中心</string>
    <string name="set_password">设置密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="auto_update_setting">自动更新设置</string>
    <string name="auto_update_setting_on">自动更新设置已经开启</string>
    <string name="auto_update_setting_off">自动更新已关闭</string>
    <string name="anti_theft">手机防盗</string>
    <string name="safe_number">安全号码</string>
    <string name="safe_on_or_off">防盗保护是否开启</string>
    <string name="set_guide">重新进入设置导航</string>
    <string name="function_profile">功能简介</string>
    <string name="function1">GPS追踪：#*location*#</string>
    <string name="function2">播放报警音乐：#*alarm*#</string>
    <string name="function3">远程删除数据：#*wipedata*#</string>
    <string name="function4">远程锁屏：#*lockscreen*#</string>
    <string name="setup1_title">1.欢迎使用手机防盗</string>
    <string name="setup1_1">您的手机防盗卫士：</string>
    <string name="setup1_2">SIM卡变更报警</string>
    <string name="setup1_3">GPS追踪</string>
    <string name="setup1_4">远程销毁数据</string>
    <string name="setup1_5">远程锁屏</string>
    <string name="text">下一步</string>
    <string name="setup2_title">2.手机卡绑定</string>
    <string name="setup2_content">通过绑定SIM卡：</string>
    <string name="setup2_content_1">下次重启手机如果发现SIM卡变化,就会发送报警短信</string>
    <string name="setup2_content_2_title">点击绑定SIM卡</string>
    <string name="setup2_content_2_content1">SIM卡已经绑定</string>
    <string name="setup2_content_2_content2">SIM卡没有绑定</string>
    <string name="previous">上一步</string>
    <string name="setup3_title">3.设置安全号码</string>
    <string name="setup3_content">SIM卡变更后:</string>
    <string name="setup3_content_1">报警短信会发送给安全号码</string>
    <string name="setup3_content_2">请输入或者选择安全号码</string>
    <string name="setup3_content_3">请选择联系人</string>
    <string name="setup4_title">4.恭喜您设置完成</string>
    <string name="setup4_content">防盗保护没有开启</string>
    <string name="set_commit">设置完成</string>
    <string name="setup4_content_1">防盗保护已经开启</string>
    <string name="setup4_content_2">防盗保护没有开启</string>
    <string name="choose_contact">请选择联系人</string>
    <string name="number_location_search">电话归属地查询</string>
    <string name="advance_tools_title">高级工具</string>
    <string name="address_search">归属地查询</string>
    <string name="search_result">查询结果</string>
    <string name="auto_show_address_off">归属地显示已经关闭</string>
    <string name="auto_show_address_on">归属地显示已经开启</string>
    <string name="auto_show_address">归属地显示设置</string>
    <string name="location">未知号码</string>
    <string name="addressShowStyle">归属地显示风格</string>
    <string name="address_dialog_title">归属地提示风格</string>
    <string name="address_single_choose_array_1">半透明</string>
    <string name="address_single_choose_array_2">活力橙</string>
    <string name="address_single_choose_array_3">卫士蓝</string>
    <string name="address_single_choose_array_4">金属灰</string>
    <string name="address_single_choose_array_5">苹果绿</string>
    <string name="address_location">归属地显示位置</string>
    <string name="set_address_location">设置归属地提示框显示位置</string>
    <string name="drag_view_text">按住提示框拖到任意位置\n按手机返回键立即生效</string>
    <string name="black_manage">黑名单管理</string>
    <string name="phone_intercept">电话拦截</string>
    <string name="all_interrupt">全部拦截</string>
    <string name="sms_interrupt">短信拦截</string>
    <string name="play_life">玩命加载中...</string>
    <string name="previous_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="jump_to_page">跳转到哪一页</string>
    <string name="add">添加</string>
    <string name="add_black_number">添加黑名单</string>
    <string name="please_input_black_number">请输入黑名单</string>
    <string name="black_number_off">黑名单更新已关闭</string>
    <string name="black_number_on">黑名单更新已开启</string>
    <string name="black_number">黑名单设置</string>
    <string name="my_software">我的软件</string>
    <string name="ram_enable">内存可用:</string>
    <string name="sdcard_enable">SD卡可用：</string>
    <string name="application_name">应用名字</string>
    <string name="application_location">安装位置</string>
    <string name="size">尺寸</string>
    <string name="phone_rom">手机内存</string>
    <string name="user_application">用户程序</string>
    <string name="system_application">系统程序</string>
    <string name="external">外部存储</string>
    <string name="uninstall">卸载</string>
    <string name="running">运行</string>
    <string name="share">分享</string>
    <string name="details">详情</string>
</resources>
