<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/dialog_set_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/focused_text_margin"
        android:textSize="@dimen/home_title_textsize"
        android:textColor="@color/black"
        android:text="@string/set_password"
        android:background="@color/fen"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_password"
        android:padding="@dimen/focused_text_margin"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/et_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/focused_text_margin"
        android:hint="@string/please_input_password_again"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/yes"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            />
        <Button
            android:id="@+id/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />
    </LinearLayout>
</LinearLayout>