<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@id/iv_icon"
        android:layout_width="@dimen/dimen_60dp"
        android:layout_height="@dimen/dimen_60dp"
        android:background="@mipmap/ic_launcher"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:orientation="vertical">

        <TextView
            android:id="@id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/application_name"
            android:textSize="@dimen/splash_app_version_size"
            />

        <TextView
            android:id="@id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/splash_app_version_size"
            android:layout_weight="1"
            android:text="@string/application_location"
            android:textSize="@dimen/margin_13_dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/tv_app_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:singleLine="true"
            android:text="@string/size"
            android:textSize="@dimen/settings_content_size"/>
    </RelativeLayout>
</LinearLayout>